# himotoki-split

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: AGENTS.md
himotoki_split/: __init__.py  __main__.py  cli.py  counters.py  dictionary.py  raw_types.py  segfilters.py  splits.py  suffix_splitting.py  synergies.py  tokenizer.py  trie.py
output/: .gitkeep
scripts/: __init__.py  build_dictionary.py  compare_himotoki.py  test_sentences.py
